[Issue #777] move trino installation instructions into pixels-trino (#778)